[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oedisi-example"
version = "0.1.0"
description = "OEDISI Example - A monorepo of co-simulation components for power system analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Alliance for Sustainable Energy, LLC", email = "joseph.mckinsey@nrel.gov"}
]
keywords = ["oedisi", "power-systems", "co-simulation", "helics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

# Common dependencies for development
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=0.981",
    "ruff>=0.7.0",
    "pre-commit>=3.0",
]

# All components for convenience
all = [
    "helics>=3.4.0",
    "pydantic>=2.0",
    "oedisi~=3.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["Components"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
addopts = [
    "--verbose",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
follow_imports = "skip"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
# Uncomment for stricter checks:
# disallow_untyped_defs = true
# check_untyped_defs = true

[[tool.mypy.overrides]]
module = "Components.*"
ignore_errors = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "D203", "D205", "D212", "D213", "D401", "D415",
    "E203", # conflict with formatter
    "E501", # line too long (pervasive in this codebase)
    "B007", # unused loop control variable (pervasive)
    "B008", # do not perform function calls in argument defaults (pervasive)
    "B904", # raise ... from err (pervasive in server exception handling)
    "B028", # stacklevel=2 (minor)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["Components"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
