[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localfeeder"
version = "0.1.0"
description = "OEDISI LocalFeeder - OpenDSS-based power distribution feeder simulator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "openEDI", email = "info@openedi.org"}
]
keywords = ["oedisi", "helics", "opendss", "power-distribution", "feeder"]

dependencies = [
    "helics>=3.4.0",
    "pydantic",
    "pyarrow",
    "scipy",
    "matplotlib",
    "numpy",
    "pandas",
    "OpenDSSDirect.py[extras]==0.7.0",
    "boto3",
    "xarray",
    "fastapi",
    "uvicorn",
    "oedisi~=3.0",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",  # for testing FastAPI
    "mypy>=0.981",
    "black>=23.0",
    "isort>=5.9",
    "plotille>=5.0",  # for test visualization
]

[project.scripts]
localfeeder-server = "localfeeder.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["localfeeder*"]
exclude = ["tests*"]
