[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "player"
version = "0.1.0"
description = "OEDISI Player - Dataset playback federate for HELICS co-simulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Alliance for Sustainable Energy, LLC"}
]
keywords = ["oedisi", "helics", "player", "playback", "data-replay"]

dependencies = [
    "helics>=3.4.0",
    "pydantic",
    "pyarrow",
    "pandas",
    "fastapi",
    "uvicorn",
    "oedisi~=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "mypy>=0.981",
    "ruff>=0.7.0",
]

[project.scripts]
player-server = "player.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["player*"]
exclude = ["tests*"]
