[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wls-federate"
version = "0.1.0"
description = "OEDISI WLS Federate - Weighted least squares state estimation for power systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "openEDI", email = "info@openedi.org"}
]
keywords = ["oedisi", "helics", "state-estimation", "wls"]

dependencies = [
    "helics>=3.4.0",
    "pydantic",
    "scipy",
    "numpy",
    "fastapi",
    "uvicorn",
    "oedisi~=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",  # for testing FastAPI
    "mypy>=0.981",
    "black>=23.0",
    "isort>=5.9",
]

[project.scripts]
wls-federate-server = "wls_federate.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wls_federate*"]
exclude = ["tests*"]
